Fix search button size and overlap on mobile

--- a/src/components/Search/search.module.scss
+++ b/src/components/Search/search.module.scss
@@ -24,10 +24,10 @@
 .toggleButton {
     position: absolute;
     top: 0;
-    right: 8px;
+    right: 0px;
     z-index: 101;
-    height: 44px;
-    width: 44px;
+    height: 48px;
+    width: 48px;
     padding: 8px;
     display: flex;
     align-items: center;
