--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -22,7 +22,7 @@
 
     header[class^=Header] {
         > div {
-            padding-top: 52px; /* 48 + 4 */
+            padding-top: 48px;
         }
 
         > div > a:first-child {
